frontend/src/styles/beautiful.css
:root {
  --border-color: #cacaca;
  --dfNodeBoxShadowColor: rgb(114, 114, 114);
  /* --background-color: #ffffff; */
  --background-color: rgb(177, 177, 177);
  /* --dfNodeBackgroundColor: white; */
  --background-box-title: #f7f7f7;
  --title-background-color: rgba(107, 43, 224, 1);
  /* harmony green: rgb(70, 224, 43) */
  --title-height: 35px;
}

header {
  height: 66px;
  border-bottom: 1px solid var(--border-color);
  padding-left: 20px;
}
header h2 {
  margin: 0px;
  line-height: 66px;
}
header a {
  color: black;
}
.them-edit-link {
  position: absolute;
  top: 10px;
  right: 100px;
  color: black;
  font-size: 40px;
}
.them-edit-link a {
  text-decoration: none;
}

.github-link {
  position: absolute;
  top: 10px;
  right: 20px;
  color: black;
}

.wrapper {
  width: 100%;
  height: calc(100vh - 67px);
  display: flex;
}

.col {
  overflow: auto;
  padding-top: 40px;
  /* padding-top: 12px; */
  max-width: 300px;
  height: 100%;
  border-right: 1px solid var(--border-color);
}

.drag-drawflow {
  /* line-height: 50px; */
  cursor: move;
}

.menu {
  position: absolute;
  height: 40px;
  display: block;
  background: white;
  width: 100%;
}
.menu ul {
  padding: 0px;
  margin: 0px;
  line-height: 40px;
}

.menu ul li {
  display: inline-block;
  margin-left: 0px;

  /* border-right: 1px solid var(--border-color); */
  padding-right: 10px;
  line-height: 40px;
  cursor: pointer;

  border-right: 3px solid var(--border-color);
  border-top: 3px solid var(--border-color);
  border-left: 3px solid var(--border-color);
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  /* margin-right 0px; */

  border-color: rgba(105, 23, 176, 1);

  /* background-color: blue; */
}

.menu ul li.selected {
  font-weight: bold;
}

.btn-export {
  float: right;
  position: absolute;
  top: 10px;
  right: 10px;
  color: white;
  font-weight: bold;
  border: 1px solid #0e5ba3;
  background: #a367b2;
  padding: 5px 10px;
  border-radius: 4px;
  cursor: pointer;
  z-index: 5;
}

.btn-clear {
  float: right;
  position: absolute;
  top: 10px;
  right: 85px;
  color: white;
  font-weight: bold;
  border: 1px solid #96015b;
  background: #e3195a;
  padding: 5px 10px;
  border-radius: 4px;
  cursor: pointer;
  z-index: 5;
}

.btn-to-blocks {
  float: right;
  position: absolute;
  top: 10px;
  right: 175px;
  color: white;
  font-weight: bold;
  border: 1px solid #96015b;
  background: #e3195a;
  padding: 5px 10px;
  border-radius: 4px;
  cursor: pointer;
  z-index: 5;
}

.swal-wide {
  width: 80% !important;
}

.swal-modal .swal-text {
  text-align: left !important;
}

.btn-lock {
  float: right;
  position: absolute;
  bottom: 10px;
  right: 140px;
  display: flex;
  font-size: 24px;
  color: white;
  padding: 5px 10px;
  background: #555555;
  border-radius: 4px;
  border-right: 1px solid var(--border-color);
  z-index: 5;
  cursor: pointer;
}

.bar-zoom {
  float: right;
  position: absolute;
  bottom: 10px;
  right: 10px;
  display: flex;
  font-size: 24px;
  color: white;
  padding: 5px 10px 5px 0px;
  background: #555555;
  border-radius: 4px;
  border-right: 1px solid var(--border-color);
  z-index: 5;
}
.bar-zoom svg {
  cursor: pointer;
  /* padding-left: 3px; */
  margin-left: 10px;
}
.bar-zoom svg:nth-child(1) {
  /* padding-left: 3px; */
  margin-left: 10px;
}

#drawflow {
  position: relative;
  width: 100%;
  height: calc(100dvh - 4.9rem);
  /* background: var(--background-color); */
  background-size: 25px 25px;
  margin-top: 4.9rem;
  /* background-image:
   linear-gradient(to right, #f1f1f1 1px, transparent 1px),
   linear-gradient(to bottom, #f1f1f1 1px, transparent 1px); */
}

@media only screen and (max-width: 768px) {
  .col {
    width: 50px;
  }
  .col .drag-drawflow span {
    display: none;
  }
  #drawflow {
    width: 100%;
  }
}

/* Editing Drawflow */

/* .drawflow .drawflow-node.selected  {
  background: white;
  border: 1px solid #a367b2;
  -webkit-box-shadow: 0 2px 20px 2px #a367b2;
  box-shadow: 0 2px 20px 2px #a367b2;
} */

/* .drawflow .connection .main-path {
  stroke: #a367b2;
  stroke-width: 7px;
} */

/* .drawflow > .drawflow-delete {
  border: 2px solid #43b993;
  background: white;
  color: #43b993;
  -webkit-box-shadow: 0 2px 20px 2px #43b993;
  box-shadow: 0 2px 20px 2px #43b993;
}

.drawflow-delete {
  border: 2px solid #a367b2;
  background: white;
  color: #a367b2;
  -webkit-box-shadow: 0 2px 20px 2px #a367b2;
  box-shadow: 0 2px 20px 2px #a367b2;
} */

.type-icon {
  padding: 5px;
  cursor: auto;
}

.variable-text {
  position: relative;
  /* min-width: 100px; */
  cursor: auto;
  display: inline-block;
  white-space: nowrap;
  margin-left: 10px;
}

.variable-text-output {
  position: relative;
  cursor: auto;
  /* min-width: 100px; */
  display: inline-block;
  white-space: nowrap;
  margin-right: 10px;
}

.drawflow-node .title-box {
  height: var(--title-height);
  display: flex;
  align-items: center;
  width: 100%;

  /* color: rgba(107, 43, 224, 1); */
  color: white;
  background: var(--title-background-color);
  border-bottom: 1px solid #e9e9e9;
  border-radius: 4px 4px 0px 0px;
  padding-left: 10px;

  svg {
    color: white;
  }
}

.drawflow-node .block-body {
  display: flex;
  flex-direction: column;
}

.drawflow-node .block-io {
  display: flex;
  flex-direction: row;
  width: 100%;
}

.action-container {
  display: flex;
  margin-left: auto;
}

.drawflow-node .block-inputs {
  width: 50%;
  padding: 5px;
  text-align: left;
}

.drawflow-node .block-outputs {
  width: 50%;
  padding: 5px;
  text-align: right;
}

.drawflow-node .block-input {
  display: flex;
  flex-direction: row;
  justify-content: left;
  align-items: center;
  position: relative;
  left: -10px;
}

.drawflow-node .block-output {
  display: flex;
  flex-direction: row;
  justify-content: right;
  align-items: center;
  position: relative;
  right: -10px;
}

.drawflow-node .title-box-view {
  height: 50px;
  line-height: 50px;
  background: lightyellow;
  border-bottom: 1px solid #e9e9e9;
  border-radius: 4px 4px 0px 0px;
  padding-left: 10px;
}

.drawflow-node .title-box-controller {
  height: 50px;
  line-height: 50px;
  background: lightblue;
  border-bottom: 1px solid #e9e9e9;
  border-radius: 4px 4px 0px 0px;
  padding-left: 10px;
}

.drawflow .title-box svg {
  position: initial;
}
.drawflow-node .box {
  /* padding: 10px 20px 20px 20px; */
  padding: 10px 20px 15px 20px;
  font-size: 14px;
  color: #555555;
}
.drawflow-node .box p {
  margin-top: 5px;
  margin-bottom: 5px;
}

.drawflow-node.welcome {
  width: 250px;
}

.drawflow-node.slack .title-box {
  border-radius: 4px;
}

.drawflow-node .block-content {
  padding: 10px;
}

.drawflow-node input,
.drawflow-node select,
.drawflow-node textarea {
  padding: 5px;
  border-radius: 4px;
  border: 1px solid var(--border-color);
  font-size: 16px;
  color: #555555;
  width: 100%;
}

.drawflow-node textarea {
  height: 100px;
}

.drawflow-node.personalized {
  background: red;
  height: 200px;
  text-align: center;
  color: white;
}
.drawflow-node.personalized .input {
  background: yellow;
}
.drawflow-node.personalized .output {
  background: green;
}

.drawflow-node.personalized.selected {
  background: blue;
}

.drawflow .connection .point {
  stroke: var(--border-color);
  stroke-width: 2;
  fill: white;
}

/* .drawflow .connection .point.selected, .drawflow .connection .point:hover {
  fill: #a367b2;
} */

/* Modal */
.modal {
  display: none;
  position: fixed;
  z-index: 7;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: auto;
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.7);
}

.modal-content {
  position: relative;
  background-color: #fefefe;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 100%; /* Could be more or less, depending on screen size */
}

/* The Close Button */
.modal .close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
  cursor: pointer;
}

@media only screen and (max-width: 768px) {
  .modal-content {
    width: 80%;
  }
}

.view-btn {
  background: none;
  border: none;
  padding: 0;
  margin: 0;
  width: 20px;
  display: node;
  height: 20px;
  cursor: pointer;
  align-self: center;
  margin-right: 20px;
}
.view-btn:hover .mySvg {
  stroke: lightgreen;
}

.err-modal .cds--modal-container {
  position: absolute;
  left: 30px;
  right: 30px;
}

.anvil-config-container .cds--modal-container {
  min-height: 380.5px;
}

/* .anvil-config-table {
  width: 10px !important;
} */

.anvil-config-table .cds--data-table-content {
  /* overflow-y: visible !important; */
  /* overflow-x: scroll !important; */
  overflow-x: visible !important;
  /* overflow-y: scroll !important; */
}

.anvil-config-table .context-cell .cds--dropdown__wrapper {
  min-width: 150px;
  max-width: 180px;
}

.anvil-config-table .driver-cell .cds--dropdown__wrapper {
  min-width: 123px;
  max-width: 100px;
}

.cds--data-table {
  min-width: 100%;
  overflow-x: scroll;
}

/* .anvil-config-modal .cds--modal-content {
  overflow-y: visible !important;
} */

/* .anvil-config-table .cds--dropdown {
  position: relative;
} */

